--- a/templates/dist.html
+++ b/templates/dist.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
-    <table class="stateTable table table-borderless table-responsive-sm">
+    <h4 class="title">{{ query }}'s District</h4>
+    
+    <table class="stateTable table table-striped table-borderless table-responsive-sm">
         {% for confirm in distData %}
         {% if confirm.state == query %}
         <tr class="head">
@@ -16,19 +18,19 @@
             {% for distzones in zonesData.zones %}
             {% if distData.district == distzones.district and confirm.state == distzones.state %}
                 {% if distzones.zone == "Red" %}
-                    <th style="background: rgba(175, 14, 52, 0.2);">{{ distData.district }}</th>
+                    <th style="background: rgba(175, 14, 52, 0.4);">{{ distData.district }}</th>
                     <td>{{ distData.confirmed }}</td>
                     <td>{{ distData.active }}</td>
                     <td>{{ distData.recovered }}</td>
                     <td>{{ distData.deceased }}</td>
                 {% elif distzones.zone == "Orange" %}
-                    <th style="background: rgba(174, 95, 27, 0.2);">{{ distData.district }}</th>
+                    <th style="background: rgba(174, 95, 27, 0.4);">{{ distData.district }}</th>
                     <td>{{ distData.confirmed }}</td>
                     <td>{{ distData.active }}</td>
                     <td>{{ distData.recovered }}</td>
                     <td>{{ distData.deceased }}</td>
                 {% else %}
-                    <th style="background: rgba(35, 118, 59, 0.2);">{{ distData.district }}</th>
+                    <th style="background: rgba(35, 118, 59, 0.4);">{{ distData.district }}</th>
                     <td>{{ distData.confirmed }}</td>
                     <td>{{ distData.active }}</td>
                     <td>{{ distData.recovered }}</td>
