--- a/templates/dist.html
+++ b/templates/dist.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
     <h4 class="title">{{ query }}'s District</h4>
-    
-    <table class="stateTable table table-striped table-borderless table-responsive-sm">
+    <a href="/"><i class="fa fa-home" aria-hidden="true"></i></a>
+    <table class="table table-striped table-borderless table-responsive-sm">
         {% for confirm in distData %}
         {% if confirm.state == query %}
         <tr class="head">
